# flow_field_dataset

./: .gitignore  .readthedocs.yaml  README.md  exploration.ipynb  main.py  new_huggingface_exploration.ipynb  pyproject.toml  pyproject_poetry.toml
cooldata/: dgl_flow_field_dataset.py  flow_field_dataset.py  pyvista_flow_field_dataset.py
datasets/Example cgns volume + surface/: design_0_surface.cgns  design_1_surface.cgns  design_2_surface.cgns
docs/: conf.py  index.rst  requirements.txt
docs/source/: cooldata.rst  modules.rst
docs/usage/: autodoc.rst  example_metadata.rst  installation.rst
examples/dataset_exploration/: metadata.ipynb
examples/meshgraphnet/: explore_dataset.ipynb  install.sh  requirements.txt  train.ipynb  volume.ipynb
examples/voxel_data/: Readme.md  datamodule.py  flow_field_model.py  losses.csv  main.ipynb  model.py  plot_losses.ipynb  task.py  train.ipynb  train.py  unet.ipynb
src/: dgl_flow_field_dataset.py  pyvista_flow_field_dataset.py  voxel_flow_field_dataset.py
