[project]
name = "flow-field-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=0.27.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyvista[all]>=0.44.2",
    "tensordict>=0.5.0",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.67.1",
]
